k8s/kong/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saldo-api-ingress
  namespace: default
  annotations:
    konghq.com/plugins: rate-limit-5pm, api-key-auth
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  ingressClassName: kong
  tls:
  - hosts:
    - localhost
    secretName: saldo-api-tls
  rules:
  - host: localhost
    http:
      paths:
      - path: /saldo
        pathType: Prefix
        backend:
          service:
            name: saldo-api
            port:
              number: 80
